--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -31,7 +31,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:hmcl.desktop,applications:visual-studio-code.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,applications:wps-office-prometheus.desktop,applications:virtualbox.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:hmcl.desktop,applications:visual-studio-code.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:screenkey.desktop,applications:virtualbox.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,applications:wps-office-prometheus.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
 
 [Containments][1][Applets][48]
 immutability=1
@@ -211,7 +211,7 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][55][Configuration]
-PreloadWeight=47
+PreloadWeight=7
 
 [Containments][15][Applets][55][Configuration][ConfigDialog]
 DialogHeight=540
@@ -222,7 +222,7 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][56][Configuration]
-PreloadWeight=47
+PreloadWeight=7
 
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
