--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -38,18 +38,21 @@ immutability=1
 plugin=org.kde.plasma.trash
 
 [Containments][1][Applets][49][Configuration]
-PreloadWeight=23
+PreloadWeight=15
 
 [Containments][1][Applets][54]
 immutability=1
 plugin=org.kde.latte.separator
 
 [Containments][1][Applets][54][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][1][Applets][69]
 immutability=1
 plugin=org.kde.plasma.dittomenu
+
+[Containments][1][Applets][69][Configuration]
+PreloadWeight=92
 
 [Containments][1][Applets][69][Configuration][ConfigDialog]
 DialogHeight=540
@@ -112,7 +115,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][15][Applets][17]
 immutability=1
@@ -147,7 +150,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=1
+PreloadWeight=0
 
 [Containments][15][Applets][29]
 immutability=1
@@ -189,7 +192,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][15][Applets][34][Configuration]
-PreloadWeight=16
+PreloadWeight=8
 
 [Containments][15][Applets][34][Configuration][ConfigDialog]
 DialogHeight=540
@@ -210,14 +213,14 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][67][Configuration]
-PreloadWeight=34
+PreloadWeight=10
 
 [Containments][15][Applets][68]
 immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][68][Configuration]
-PreloadWeight=34
+PreloadWeight=10
 
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
@@ -248,7 +251,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=49
+PreloadWeight=46
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -265,7 +268,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=54
+PreloadWeight=46
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -273,14 +276,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=5
+PreloadWeight=35
 
 [Containments][4][Applets][44]
 immutability=1
 plugin=org.kpple.kppleMenu
 
 [Containments][4][Applets][44][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][4][Applets][44][Configuration][ConfigDialog]
 DialogHeight=540
@@ -291,7 +294,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][4][Applets][58][Configuration]
-PreloadWeight=52
+PreloadWeight=44
 
 [Containments][4][Applets][58][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -313,14 +316,14 @@ immutability=1
 plugin=org.kde.milou
 
 [Containments][4][Applets][61][Configuration]
-PreloadWeight=47
+PreloadWeight=39
 
 [Containments][4][Applets][62]
 immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][62][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][4][Applets][62][Configuration][ConfigDialog]
 DialogHeight=540
@@ -335,7 +338,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][63][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][4][Applets][63][Configuration][ConfigDialog]
 DialogHeight=540
@@ -350,7 +353,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][64][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][4][Applets][64][Configuration][ConfigDialog]
 DialogHeight=540
@@ -365,7 +368,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][65][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][4][Applets][65][Configuration][ConfigDialog]
 DialogHeight=540
@@ -380,7 +383,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][66][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][4][Applets][66][Configuration][ConfigDialog]
 DialogHeight=540
