--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -136,7 +136,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=0
+PreloadWeight=15
 
 [Containments][15][Applets][21]
 immutability=1
@@ -222,6 +222,10 @@ plugin=org.kde.plasma.mediacontroller_plus
 [Containments][15][Applets][68][Configuration]
 PreloadWeight=0
 
+[Containments][15][Applets][68][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
+
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
 knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
@@ -268,7 +272,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=61
+PreloadWeight=71
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
