--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -136,7 +136,11 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=15
+PreloadWeight=35
+
+[Containments][15][Applets][19][Configuration][ConfigDialog]
+DialogHeight=540
+DialogWidth=720
 
 [Containments][15][Applets][21]
 immutability=1
@@ -272,7 +276,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=71
+PreloadWeight=81
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -280,14 +284,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=45
+PreloadWeight=55
 
 [Containments][4][Applets][44]
 immutability=1
 plugin=org.kpple.kppleMenu
 
 [Containments][4][Applets][44][Configuration]
-PreloadWeight=97
+PreloadWeight=100
 
 [Containments][4][Applets][44][Configuration][ConfigDialog]
 DialogHeight=540
