--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -31,7 +31,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:org.kde.krdc.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,applications:wps-office-prometheus.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:electronic-wechat.desktop,applications:deepin.com.qq.im.light.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:vlc.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,applications:wps-office-prometheus.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -76,7 +76,7 @@ advanced=false
 alignmentUpgraded=true
 appletOrder=69;2;54;49
 durationTime=x1
-iconSize=49
+iconSize=45
 lengthExtMargin=4
 panelSize=100
 panelTransparency=30
@@ -115,7 +115,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=50
+PreloadWeight=60
 
 [Containments][15][Applets][17]
 immutability=1
@@ -136,7 +136,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=55
+PreloadWeight=65
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
