--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -212,6 +212,20 @@ plugin=org.kde.plasma.nightcolorcontrol
 [Containments][15][Applets][36][Configuration]
 PreloadWeight=0
 
+[Containments][15][Applets][70]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][15][Applets][70][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][71]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][15][Applets][71][Configuration]
+PreloadWeight=0
+
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
 knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus
@@ -266,14 +280,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=72
+PreloadWeight=82
 
 [Containments][4][Applets][44]
 immutability=1
 plugin=org.kpple.kppleMenu
 
 [Containments][4][Applets][44][Configuration]
-PreloadWeight=92
+PreloadWeight=100
 
 [Containments][4][Applets][44][Configuration][ConfigDialog]
 DialogHeight=540
