--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -31,7 +31,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:electronic-wechat.desktop,applications:deepin.com.qq.im.light.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:vlc.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:electronic-wechat.desktop,applications:deepin.com.qq.im.light.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:vlc.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -255,7 +255,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=83
+PreloadWeight=88
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -280,7 +280,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=97
+PreloadWeight=100
 
 [Containments][4][Applets][44]
 immutability=1
