--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -11,6 +11,7 @@ immutability=1
 isPreferredForShortcuts=false
 lastScreen=10
 location=4
+name=
 onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
@@ -129,7 +130,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=24
+PreloadWeight=34
 
 [Containments][15][Applets][19]
 immutability=1
@@ -239,6 +240,7 @@ immutability=1
 isPreferredForShortcuts=false
 lastScreen=-1
 location=3
+name=
 onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
@@ -272,7 +274,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=97
+PreloadWeight=100
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
