--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -32,7 +32,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:electronic-wechat.desktop,applications:deepin.com.qq.im.light.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:vlc.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:aegisub.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:org.kde.ksysguard.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:electronic-wechat.desktop,applications:hmcl.desktop,applications:deepin.com.qq.im.light.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:vlc.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:aegisub.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:teamspeak3.desktop,applications:electron-netease-cloud-music.desktop,applications:org.flameshot.Flameshot.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -46,14 +46,14 @@ immutability=1
 plugin=org.kde.latte.separator
 
 [Containments][1][Applets][54][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][1][Applets][69]
 immutability=1
 plugin=org.kde.plasma.dittomenu
 
 [Containments][1][Applets][69][Configuration]
-PreloadWeight=76
+PreloadWeight=44
 
 [Containments][1][Applets][69][Configuration][ConfigDialog]
 DialogHeight=540
@@ -116,7 +116,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=59
+PreloadWeight=27
 
 [Containments][15][Applets][17]
 immutability=1
@@ -130,14 +130,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=44
+PreloadWeight=12
 
 [Containments][15][Applets][19]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=84
+PreloadWeight=52
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -148,14 +148,14 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=92
+PreloadWeight=60
 
 [Containments][15][Applets][28]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][15][Applets][28][Configuration]
-PreloadWeight=14
+PreloadWeight=0
 
 [Containments][15][Applets][29]
 immutability=1
@@ -197,7 +197,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][15][Applets][34][Configuration]
-PreloadWeight=22
+PreloadWeight=0
 
 [Containments][15][Applets][34][Configuration][ConfigDialog]
 DialogHeight=540
@@ -215,17 +215,11 @@ PreloadWeight=0
 
 [Containments][15][Applets][70]
 immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
-
-[Containments][15][Applets][70][Configuration]
-PreloadWeight=0
+plugin=org.kde.plasma.mediacontroller
 
 [Containments][15][Applets][71]
 immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][71][Configuration]
-PreloadWeight=0
+plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
@@ -257,7 +251,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=100
+PreloadWeight=68
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -274,7 +268,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=100
+PreloadWeight=68
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -282,14 +276,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=92
+PreloadWeight=60
 
 [Containments][4][Applets][44]
 immutability=1
 plugin=org.kpple.kppleMenu
 
 [Containments][4][Applets][44][Configuration]
-PreloadWeight=100
+PreloadWeight=68
 
 [Containments][4][Applets][44][Configuration][ConfigDialog]
 DialogHeight=540
@@ -300,7 +294,7 @@ immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][4][Applets][58][Configuration]
-PreloadWeight=38
+PreloadWeight=6
 
 [Containments][4][Applets][58][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -322,14 +316,14 @@ immutability=1
 plugin=org.kde.milou
 
 [Containments][4][Applets][61][Configuration]
-PreloadWeight=23
+PreloadWeight=0
 
 [Containments][4][Applets][62]
 immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][62][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][4][Applets][62][Configuration][ConfigDialog]
 DialogHeight=540
@@ -344,7 +338,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][63][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][4][Applets][63][Configuration][ConfigDialog]
 DialogHeight=540
@@ -359,7 +353,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][64][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][4][Applets][64][Configuration][ConfigDialog]
 DialogHeight=540
@@ -374,7 +368,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][65][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][4][Applets][65][Configuration][ConfigDialog]
 DialogHeight=540
@@ -389,7 +383,7 @@ immutability=1
 plugin=org.kde.latte.spacer
 
 [Containments][4][Applets][66][Configuration]
-PreloadWeight=18
+PreloadWeight=0
 
 [Containments][4][Applets][66][Configuration][ConfigDialog]
 DialogHeight=540
