--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -478,6 +478,7 @@ disableBordersForMaximizedWindows=false
 icon=
 lastUsedActivity=1ff3a8e8-a8f7-4d09-a4e9-462a8612c1ac
 launchers=
+popUpMargin=-1
 preferredForShortcutsTouched=false
 sharedLayout=
 showInMenu=true
