--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -53,7 +53,7 @@ immutability=1
 plugin=org.kde.plasma.dittomenu
 
 [Containments][1][Applets][69][Configuration]
-PreloadWeight=36
+PreloadWeight=20
 
 [Containments][1][Applets][69][Configuration][ConfigDialog]
 DialogHeight=540
@@ -66,7 +66,7 @@ favoritesPortedToKAstats=true
 useCustomButtonImage=true
 
 [Containments][1][ConfigDialog]
-DialogHeight=901
+DialogHeight=903
 DialogWidth=539
 
 [Containments][1][Configuration]
@@ -77,8 +77,9 @@ advanced=false
 alignmentUpgraded=true
 appletOrder=69;2;54;49
 durationTime=x1
-iconSize=42
+iconSize=48
 lengthExtMargin=4
+maxLength=80
 panelSize=100
 panelTransparency=30
 shadowOpacity=60
@@ -116,7 +117,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=24
+PreloadWeight=8
 
 [Containments][15][Applets][17]
 immutability=1
@@ -130,14 +131,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=14
+PreloadWeight=0
 
 [Containments][15][Applets][19]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=44
+PreloadWeight=28
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -148,7 +149,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=57
+PreloadWeight=41
 
 [Containments][15][Applets][28]
 immutability=1
@@ -264,16 +265,17 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=75
+PreloadWeight=64
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
 dateFormat=custom
 enabledCalendarPlugins=/usr/lib/qt/plugins/plasmacalendarplugins/holidaysevents.so
+showDate=false
 use24hFormat=2
 
 [Containments][4][Applets][12][Configuration][ConfigDialog]
-DialogHeight=540
+DialogHeight=558
 DialogWidth=720
 
 [Containments][4][Applets][14]
@@ -281,7 +283,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=80
+PreloadWeight=64
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -289,25 +291,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=57
-
-[Containments][4][Applets][44]
-immutability=1
-plugin=org.kpple.kppleMenu
-
-[Containments][4][Applets][44][Configuration]
-PreloadWeight=65
-
-[Containments][4][Applets][44][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=904
+PreloadWeight=46
 
 [Containments][4][Applets][58]
 immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][4][Applets][58][Configuration]
-PreloadWeight=8
+PreloadWeight=0
 
 [Containments][4][Applets][58][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
@@ -330,81 +321,6 @@ plugin=org.kde.milou
 
 [Containments][4][Applets][61][Configuration]
 PreloadWeight=0
-
-[Containments][4][Applets][62]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][4][Applets][62][Configuration]
-PreloadWeight=0
-
-[Containments][4][Applets][62][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][62][Configuration][General]
-containmentType=Latte
-lengthPixels=15
-
-[Containments][4][Applets][63]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][4][Applets][63][Configuration]
-PreloadWeight=0
-
-[Containments][4][Applets][63][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][63][Configuration][General]
-containmentType=Latte
-lengthPixels=10
-
-[Containments][4][Applets][64]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][4][Applets][64][Configuration]
-PreloadWeight=0
-
-[Containments][4][Applets][64][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][64][Configuration][General]
-containmentType=Latte
-lengthPixels=10
-
-[Containments][4][Applets][65]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][4][Applets][65][Configuration]
-PreloadWeight=0
-
-[Containments][4][Applets][65][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][65][Configuration][General]
-containmentType=Latte
-lengthPixels=7
-
-[Containments][4][Applets][66]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][4][Applets][66][Configuration]
-PreloadWeight=0
-
-[Containments][4][Applets][66][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][66][Configuration][General]
-containmentType=Latte
-lengthPixels=7
 
 [Containments][4][Applets][8]
 immutability=1
@@ -435,7 +351,7 @@ noWindowType=text
 textType=1
 
 [Containments][4][ConfigDialog]
-DialogHeight=901
+DialogHeight=903
 DialogWidth=539
 
 [Containments][4][Configuration]
@@ -447,7 +363,7 @@ alignmentUpgraded=true
 animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
-appletOrder=62;44;9;8;58;14;66;12;65;61;64;23;63
+appletOrder=9;8;58;14;12;61;23
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
@@ -461,8 +377,8 @@ plasmaBackgroundForPopups=true
 shadows=None
 shadowsUpgraded=true
 solidBackgroundForMaximized=true
-splitterPosition=5
-splitterPosition2=6
+splitterPosition=3
+splitterPosition2=4
 tasksUpgraded=true
 titleTooltips=false
 zoomLevel=0
