--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -53,7 +53,7 @@ immutability=1
 plugin=org.kde.plasma.dittomenu
 
 [Containments][1][Applets][69][Configuration]
-PreloadWeight=20
+PreloadWeight=12
 
 [Containments][1][Applets][69][Configuration][ConfigDialog]
 DialogHeight=540
@@ -77,7 +77,7 @@ advanced=false
 alignmentUpgraded=true
 appletOrder=69;2;54;49
 durationTime=x1
-iconSize=48
+iconSize=38
 lengthExtMargin=4
 maxLength=80
 panelSize=100
@@ -117,7 +117,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=8
+PreloadWeight=0
 
 [Containments][15][Applets][17]
 immutability=1
@@ -138,7 +138,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=28
+PreloadWeight=20
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -149,7 +149,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=41
+PreloadWeight=33
 
 [Containments][15][Applets][28]
 immutability=1
@@ -221,19 +221,19 @@ plugin=org.kde.plasma.keyboardlayout
 [Containments][15][Applets][70][Configuration]
 PreloadWeight=0
 
-[Containments][15][Applets][71]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][71][Configuration]
-PreloadWeight=0
-
 [Containments][15][Applets][72]
 immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][15][Applets][72][Configuration]
-PreloadWeight=0
+PreloadWeight=26
+
+[Containments][15][Applets][73]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][15][Applets][73][Configuration]
+PreloadWeight=26
 
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
@@ -265,7 +265,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=64
+PreloadWeight=56
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -283,7 +283,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=64
+PreloadWeight=56
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -291,7 +291,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=46
+PreloadWeight=38
 
 [Containments][4][Applets][58]
 immutability=1
@@ -321,6 +321,33 @@ plugin=org.kde.milou
 
 [Containments][4][Applets][61][Configuration]
 PreloadWeight=0
+
+[Containments][4][Applets][71]
+immutability=1
+plugin=org.kde.activeWindowControl
+
+[Containments][4][Applets][71][Configuration]
+PreloadWeight=42
+
+[Containments][4][Applets][71][Configuration][Appearance]
+boldFontWeight=true
+buttonOrder=maximize|minimize|close|alldesktops
+buttonSize=0.9
+buttonsDynamicWidth=true
+buttonsPosition=UpperRight
+buttonsStandalone=true
+controlButtonsSpacing=0
+doNotHideControlButtons=true
+horizontalScreenWidthPercent=0.030000000000000002
+showButtonOnlyWhenMaximized=true
+showMaximize=true
+showMinimize=true
+showWindowIcon=false
+showWindowTitle=false
+
+[Containments][4][Applets][71][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
 
 [Containments][4][Applets][8]
 immutability=1
@@ -363,7 +390,7 @@ alignmentUpgraded=true
 animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
-appletOrder=9;8;58;14;12;61;23
+appletOrder=71;9;8;58;14;12;61;23
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
@@ -377,8 +404,8 @@ plasmaBackgroundForPopups=true
 shadows=None
 shadowsUpgraded=true
 solidBackgroundForMaximized=true
-splitterPosition=3
-splitterPosition2=4
+splitterPosition=4
+splitterPosition2=5
 tasksUpgraded=true
 titleTooltips=false
 zoomLevel=0
