--- a/latte/KiteAB.layout.latte
+++ b/latte/KiteAB.layout.latte
@@ -32,7 +32,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:lmms.desktop,applications:deepin.com.qq.im.light.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:visual-studio-code.desktop,applications:eclipse.desktop,applications:lmms.desktop,applications:electron-qq.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -138,7 +138,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=20
+PreloadWeight=35
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -283,7 +283,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=56
+PreloadWeight=71
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -291,14 +291,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=43
+PreloadWeight=100
 
 [Containments][4][Applets][58]
 immutability=1
 plugin=org.kde.plasma.systemmonitor
 
 [Containments][4][Applets][58][Configuration]
-PreloadWeight=10
+PreloadWeight=15
 
 [Containments][4][Applets][58][Configuration][Appearance]
 chartFace=org.kde.ksysguard.linechart
