added windows style for latte

--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -1,114 +1,13 @@
 [ActionPlugins][1]
 RightButton;NoModifier=org.kde.latte.contextmenu
 
-[Containments][1]
-activityId=
-byPassWM=false
-dockWindowBehavior=true
-enableKWinEdges=true
-formfactor=2
-immutability=1
-isPreferredForShortcuts=false
-lastScreen=10
-location=4
-name=
-onPrimary=true
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-settingsComplexity=4
-timerHide=700
-timerShow=200
-viewType=0
-visibility=2
-wallpaperplugin=org.kde.image
-
-[Containments][1][Applets][2]
-immutability=1
-plugin=org.kde.latte.plasmoid
-
-[Containments][1][Applets][2][Configuration]
-PreloadWeight=0
-
-[Containments][1][Applets][2][Configuration][General]
-isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:electron-qq.desktop,applications:hmcl.desktop,applications:lunarclient.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:arctime.desktop,applications:virtualbox.desktop,applications:screenkey.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:blender.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop,file:///latte-separator1.desktop
-
-[Containments][1][Applets][49]
-immutability=1
-plugin=org.kde.plasma.trash
-
-[Containments][1][Applets][49][Configuration]
-PreloadWeight=0
-
-[Containments][1][Applets][54]
-immutability=1
-plugin=org.kde.latte.separator
-
-[Containments][1][Applets][54][Configuration]
-PreloadWeight=0
-
-[Containments][1][Applets][69]
-immutability=1
-plugin=org.kde.plasma.dittomenu
-
-[Containments][1][Applets][69][Configuration]
-PreloadWeight=12
-
-[Containments][1][Applets][69][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][1][Applets][69][Configuration][General]
-customButtonImage=app-launcher
-favoriteSystemActions=logout,lock-screen
-favoritesPortedToKAstats=true
-useCustomButtonImage=true
-
-[Containments][1][ConfigDialog]
-DialogHeight=903
-DialogWidth=539
-
-[Containments][1][Configuration]
-PreloadWeight=0
-
-[Containments][1][General]
-advanced=false
-alignmentUpgraded=true
-appletOrder=69;2;54;49
-durationTime=x1
-iconSize=38
-lengthExtMargin=4
-maxLength=80
-panelSize=100
-panelTransparency=30
-shadowOpacity=60
-shadowSize=45
-shadowsUpgraded=true
-showGlow=false
-splitterPosition=2
-splitterPosition2=3
-tasksUpgraded=true
-thickMargin=25
-zoomLevel=12
-
-[Containments][1][Indicator]
-customType=
-enabled=true
-enabledForApplets=true
-padding=0.10000000149011612
-type=org.kde.latte.default
-
-[Containments][1][Indicator][org.kde.latte.default][General]
-activeStyle=Dot
-
 [Containments][15]
 PreloadWeight=0
 activityId=
 formfactor=2
 immutability=1
 lastScreen=-1
-location=3
+location=4
 plugin=org.kde.plasma.private.systemtray
 wallpaperplugin=org.kde.image
 
@@ -117,7 +16,7 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][15][Applets][16][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][15][Applets][17]
 immutability=1
@@ -131,14 +30,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=25
+PreloadWeight=9
 
 [Containments][15][Applets][19]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=55
+PreloadWeight=44
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -149,7 +48,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=32
+PreloadWeight=16
 
 [Containments][15][Applets][28]
 immutability=1
@@ -198,7 +97,7 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][15][Applets][34][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][15][Applets][34][Configuration][ConfigDialog]
 DialogHeight=540
@@ -247,7 +146,7 @@ formfactor=2
 immutability=1
 isPreferredForShortcuts=false
 lastScreen=-1
-location=3
+location=4
 name=
 onPrimary=true
 plugin=org.kde.latte.containment
@@ -265,7 +164,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=56
+PreloadWeight=40
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -283,7 +182,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=100
+PreloadWeight=84
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -291,29 +190,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=100
-
-[Containments][4][Applets][58]
-immutability=1
-plugin=org.kde.plasma.systemmonitor
-
-[Containments][4][Applets][58][Configuration]
-PreloadWeight=15
-
-[Containments][4][Applets][58][Configuration][Appearance]
-chartFace=org.kde.ksysguard.linechart
-title=Network Speed
-
-[Containments][4][Applets][58][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][58][Configuration][SensorColors]
-network/all/download=49,91,239
-network/all/upload=239,197,49
-
-[Containments][4][Applets][58][Configuration][Sensors]
-highPrioritySensorIds=["network/all/download","network/all/upload"]
+PreloadWeight=84
 
 [Containments][4][Applets][61]
 immutability=1
@@ -322,60 +199,41 @@ plugin=org.kde.milou
 [Containments][4][Applets][61][Configuration]
 PreloadWeight=0
 
-[Containments][4][Applets][71]
+[Containments][4][Applets][77]
 immutability=1
-plugin=org.kde.activeWindowControl
+plugin=org.kde.plasma.icon
 
-[Containments][4][Applets][71][Configuration]
+[Containments][4][Applets][77][Configuration]
 PreloadWeight=42
+localPath=/home/kiteab/.local/share/plasma_icons/google-chrome.desktop
+url=file:///usr/share/applications/google-chrome.desktop
 
-[Containments][4][Applets][71][Configuration][Appearance]
-boldFontWeight=true
-buttonOrder=maximize|minimize|close|alldesktops
-buttonSize=0.9
-buttonsDynamicWidth=true
-buttonsPosition=UpperRight
-buttonsStandalone=true
-controlButtonsSpacing=0
-doNotHideControlButtons=true
-horizontalScreenWidthPercent=0.030000000000000002
-showButtonOnlyWhenMaximized=true
-showMaximize=true
-showMinimize=true
-showWindowIcon=false
-showWindowTitle=false
-
-[Containments][4][Applets][71][Configuration][ConfigDialog]
-DialogHeight=558
-DialogWidth=720
-
-[Containments][4][Applets][8]
+[Containments][4][Applets][78]
 immutability=1
-plugin=org.kde.plasma.appmenu
+plugin=org.kde.plasma.icon
 
-[Containments][4][Applets][8][Configuration]
-PreloadWeight=0
+[Containments][4][Applets][78][Configuration]
+PreloadWeight=42
+localPath=/home/kiteab/.local/share/plasma_icons/org.kde.dolphin (1).desktop
+url=file:///usr/share/applications/org.kde.dolphin.desktop
 
-[Containments][4][Applets][8][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][4][Applets][9]
+[Containments][4][Applets][79]
 immutability=1
-plugin=org.communia.apptitle
+plugin=org.kde.plasma.icon
 
-[Containments][4][Applets][9][Configuration]
-PreloadWeight=0
+[Containments][4][Applets][79][Configuration]
+PreloadWeight=42
+localPath=/home/kiteab/.local/share/plasma_icons/emacs.desktop
+url=file:///usr/share/applications/emacs.desktop
 
-[Containments][4][Applets][9][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
+[Containments][4][Applets][80]
+immutability=1
+plugin=org.kde.plasma.icon
 
-[Containments][4][Applets][9][Configuration][General]
-bold=true
-noWindowText=Finder
-noWindowType=text
-textType=1
+[Containments][4][Applets][80][Configuration]
+PreloadWeight=42
+localPath=/home/kiteab/.local/share/plasma_icons/idea.desktop
+url=file:///usr/share/applications/idea.desktop
 
 [Containments][4][ConfigDialog]
 DialogHeight=903
@@ -390,12 +248,12 @@ alignmentUpgraded=true
 animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
-appletOrder=71;9;8;58;14;12;61;23
+appletOrder=61;77;78;79;80;14;12;23
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
 durationTime=x3
-iconSize=20
+iconSize=28
 inConfigureAppletsMode=true
 panelPosition=10
 panelSize=100
@@ -404,8 +262,8 @@ plasmaBackgroundForPopups=true
 shadows=None
 shadowsUpgraded=true
 solidBackgroundForMaximized=true
-splitterPosition=4
-splitterPosition2=5
+splitterPosition=1
+splitterPosition2=7
 tasksUpgraded=true
 titleTooltips=false
 zoomLevel=0
