--- a/latte/Plasma.layout.latte
+++ b/latte/Plasma.layout.latte
@@ -158,7 +158,8 @@ knownItems=org.kde.plasma.networkmanagement,org.kde.ktp-contactlist,org.kde.plas
 [LayoutSettings]
 activities=
 color=lightskyblue
+disableBordersForMaximizedWindows=false
 globalLaunchers=
 launchers=
-showInMenu=true
+showInMenu=false
 version=2
