--- a/latte/Unity.layout.latte
+++ b/latte/Unity.layout.latte
@@ -255,13 +255,15 @@ enabled=true
 type=org.kde.latte.default
 
 [LayoutSettings]
+activities=
 backgroundStyle=0
 color=orange
 customBackground=
 customTextColor=
+disableBordersForMaximizedWindows=false
 icon=
 lastUsedActivity=1ff3a8e8-a8f7-4d09-a4e9-462a8612c1ac
 launchers=
 preferredForShortcutsTouched=false
-showInMenu=true
+showInMenu=false
 version=2
